<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:orion="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_menu_item"
        android:icon="@drawable/new_search"
        android:title="@string/menu_search_item"
        orion:iconTint="?attr/menuIconTint"
        orion:showAsAction="always" />

    <item
        android:id="@+id/add_bookmark_menu_item"
        android:icon="@drawable/new_bookmark_add"
        android:title="@string/menu_add_bookmark_item"
        orion:iconTint="?attr/menuIconTint"
        orion:showAsAction="always" />

    <item
        android:id="@+id/select_text_menu_item"
        android:icon="@drawable/new_select"
        android:title="@string/menu_select_text"
        orion:iconTint="?attr/menuIconTint"
        orion:showAsAction="ifRoom" />

    <item
        android:id="@+id/goto_menu_item"
        android:icon="@drawable/new_forward"
        orion:iconTint="?attr/menuIconTint"
        android:title="@string/menu_goto_text"
        orion:showAsAction="ifRoom" />

    <item
        android:id="@+id/bookmarks_menu_item"
        android:icon="@drawable/bookmarks"
        android:title="@string/menu_bookmarks_text"
        orion:showAsAction="ifRoom" />

    <item
        android:id="@+id/zoom_menu_item"
        android:icon="@drawable/zoom"
        android:title="@string/menu_zoom_text"
        orion:showAsAction="ifRoom" />

    <item
        android:id="@+id/crop_menu_item"
        android:icon="@drawable/new_cut"
        android:title="@string/menu_crop_text"
        orion:showAsAction="ifRoom" />

    <item
        android:id="@+id/book_options_menu_item"
        android:icon="@drawable/book_preferences"
        android:title="@string/menu_book_preferences"
        orion:showAsAction="ifRoom" />

    <item
        android:id="@+id/outline_menu_item"
        android:icon="@drawable/help"
        android:title="@string/menu_outline_text" />

    <item
        android:id="@+id/open_dictionary_menu_item"
        android:icon="@drawable/dictionary"
        android:title="@string/menu_open_dictionary_text" />

    <item
        android:id="@+id/options_menu_item"
        android:icon="@drawable/options"
        android:title="@string/menu_options_text" />

    <item
        android:id="@+id/options_other"
        android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/share_menu_item"
                android:icon="@drawable/new_folder_open"
                android:title="@string/menu_share_file"
                orion:iconTint="?attr/menuIconTint" />

            <item
                android:id="@+id/open_menu_item"
                android:icon="@drawable/new_folder_open"
                orion:iconTint="?attr/menuIconTint"
                android:title="@string/menu_open_text" />

            <item
                android:id="@+id/help_menu_item"
                android:icon="@drawable/new_help"
                orion:iconTint="?attr/menuIconTint"
                orion:icon="?attr/menuIconTint"
                android:title="@string/menu_help_text" />

            <item
                android:id="@+id/about_menu_item"
                android:icon="@drawable/new_info"
                orion:iconTint="?attr/menuIconTint"
                android:title="@string/menu_about_text" />

            <item
                android:id="@+id/exit_menu_item"
                android:icon="@drawable/new_exit"
                orion:iconTint="?attr/menuIconTint"
                android:title="@string/menu_exit_text" />
        </menu>
    </item>


</menu>
