<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="file_manager_title">File Manager</string>
    <string name="file_manager_fodlers">Folders</string>
    <string name="file_manager_history">History</string>
    <string name="file_manager_contribution">Contribution</string>

    <string name="file_manager_select_tip">Please select a file to open in Orion Viewer</string>
    <string name="file_manager_path">Path:</string>
    <string name="file_manager_documents">Documents</string>
    <string name="file_manager_downloads">Downloads</string>
    <string name="file_manager_sdcard">SD Card</string>
    <string name="file_manager_grant_read_permissions">Grant read permissions</string>

    <string name="file_manager_nav_locations">Locations</string>
    <string name="file_manager_nav_settings">Settings</string>
    <string name="file_manager_nav_other">Other</string>
    <string name="file_manager_nav_system_select">Select file in system</string>
    <string name="file_manager_nav_exit">Exit</string>

    <string name="file_manager_internal_storage">Internal storage</string>
    <string name="file_manager_primary_storage">Primary storage</string>
</resources>