<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Orion Viewer - pdf, djvu, xps and cbz file viewer for android devices
  ~
  ~ Copyright (C) 2011-2013  Michael Bogdanov & Co
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" android:layout_height="fill_parent">

    <universe.constellation.orion.viewer.view.OrionDrawScene android:id="@+id/view"
                                       android:textColor="#000000"
                                       android:background="#FFFFFF"
                                       android:layout_width="fill_parent"
                                       android:layout_height="fill_parent">

    </universe.constellation.orion.viewer.view.OrionDrawScene>

</RelativeLayout>
