...
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>


    <ListView
        android:id="@+id/folderList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
</LinearLayout>

