...
                    android:layout_height="0dp"
                    android:textColor="#000000"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/problem_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:visibility="gone">

...
